--- a/WebContent/mz/prospect/panels/_editStatutProspect.xhtml
+++ b/WebContent/mz/prospect/panels/_editStatutProspect.xhtml
@@ -109,8 +109,7 @@
 								value="#{editProspectManager.prospect.statut}"
 								style="width:175px;"
 								rendered="#{editProspectManager.prospectDetail.commercial == null}">
-								<a:ajax event="change" render="statutDemande"
-									listener="#{editProspectManager.remplirMontant()}" />
+								<a:ajax event="change" render="statutDemande,buttonPanel,montantPanel"/>
 								<f:selectItem itemValue="#{ST_NON_AFFECTE}" />
 								<f:selectItem itemValue="#{ST_EN_ATTENTE}" />
 								<f:selectItem itemValue="#{ST_EN_COURS}" />
@@ -122,8 +121,7 @@
 								value="#{editProspectManager.prospect.statut}"
 								style="width:175px;"
 								rendered="#{editProspectManager.prospectDetail.commercial != null and sessionDataManager.managerDispatcher}">
-								<a:ajax event="change" render="statutDemande"
-									listener="#{editProspectManager.remplirMontant()}" />
+								<a:ajax event="change" render="statutDemande,buttonPanel,montantPanel"/>
 								<f:selectItem itemValue="#{ST_EN_ATTENTE}" />
 								<f:selectItem itemValue="#{ST_EN_COURS}" />
 								<f:selectItem itemValue="#{ST_ABANDON}" />
@@ -134,8 +132,7 @@
 								value="#{editProspectManager.prospect.statut}"
 								style="width:175px;"
 								rendered="#{editProspectManager.prospectDetail.commercial != null and sessionDataManager.commercial}">
-								<a:ajax event="change" render="statutDemande"
-									listener="#{editProspectManager.remplirMontant()}" />
+								<a:ajax event="change" render="statutDemande,buttonPanel,montantPanel"/>
 								<f:selectItem itemValue="#{ST_EN_COURS}" />
 								<f:selectItem itemValue="#{ST_ABANDON}" />
 								<f:selectItem itemValue="#{ST_GAGNE}" />
