Liste de formations archivees, action dés-archiver

--- a/WebContent/mz/formation/formation.xhtml
+++ b/WebContent/mz/formation/formation.xhtml
@@ -92,6 +92,7 @@
 		</h:form>
 		<ui:include src="commentPanel.xhtml" />
 		<ui:include src="archivePanel.xhtml" />
+		<ui:include src="unarchivePanel.xhtml" />
 		<ui:include src="deletePanel.xhtml" />
 		<ui:include src="formationPartenairePanel.xhtml" />
 		<ui:include src="formationFilierePanel.xhtml" />
