Possiblité d éditer une formation archivee

--- a/WebContent/mz/formation/visu.xhtml
+++ b/WebContent/mz/formation/visu.xhtml
@@ -338,7 +338,7 @@
 		</ui:define>
 		<ui:define name="buttons">
 
-			<a:commandButton rendered="#{formation.archivedDate == null}"
+			<a:commandButton
 			    value="Editer" id="editButton"
 				action="#{formationManager.setEditMode}"
 				render="formationPanel,referencementPanel,webPanel,sessionsPanel">
