--- a/WebContent/dmz/grille.xhtml
+++ b/WebContent/dmz/grille.xhtml
@@ -6,6 +6,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="robots" content="noindex, nofollow"/>	
 	<title>Grille de compétence - #{intervenant.nomComplet}</title>
 	<link rel="stylesheet" href="js/bootstrap-3.3.6-dist/css/bootstrap.css" />
 	<link rel="stylesheet" href="css/app.css" />
