--- a/WebContent/mail/mailLayoutExterne.xhtml
+++ b/WebContent/mail/mailLayoutExterne.xhtml
@@ -20,6 +20,7 @@
 	<m:body>
 		<html>
 		<h:head>
+		<meta name="robots" content="noindex, nofollow"/>
 		</h:head>
 		<body>
 		<ui:insert name="MailStyle"><ui:include src="/stylesheet/mail-css.xhtml" /></ui:insert> 
