--- a/WebContent/mz/calendrier/calendrier.xhtml
+++ b/WebContent/mz/calendrier/calendrier.xhtml
@@ -9,6 +9,7 @@
 
 <head>
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+<meta name="robots" content="noindex, nofollow"/>
 <title>Calendrier</title>
 
 <style type="text/css">
